--- a/index.html
+++ b/index.html
@@ -72,6 +72,86 @@
             </div>
         </div>
     </div>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>Reserve a Table</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <label for="number_of_guests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="col-sm-10">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="one_guest_radio" value="one" checked>
+                                    <label class="form-check-label" for="one_guest_checked">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="two_guest_radio" value="two">
+                                    <label class="form-check-label" for="two_guest_checked">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="three_guest_radio" value="three">
+                                    <label class="form-check-label" for="three_guest_checked">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="four_guest_radio" value="four">
+                                    <label class="form-check-label" for="four_guest_checked">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="five_guest_radio" value="five">
+                                    <label class="form-check-label" for="five_guest_checked">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="six_guest_radio" value="six">
+                                    <label class="form-check-label" for="six_guest_checked">6</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="seven_guest_radio" value="seven">
+                                    <label class="form-check-label" for="seven_guest_checked">7</label>
+                                </div>
+                            </div>                        
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="section" class="col-12 col-sm-2 col-form-label">Section</label>
+                            <div class="col-12 col-sm-4">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success mr-1 active">
+                                        <input type="radio" name="section" value="non_smoking" id="non_smoking" autocomplete="off" checked>Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="section" value="smoking" id="smoking" autocomplete="off">Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="date_and_time" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                            <div class="col-12 col-sm-4">
+                                <input class="form-control" type="text" placeholder="Date" id="date" name="date">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <input class="form-control" type="text" placeholder="Time" id="time" name="time">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-12 offset-md-2">
+                                <button class="btn btn-secondary" data-dismiss="modal"><strong>Cancel</strong></button>
+                                <button type="submit" class="btn btn-primary"><strong>Reserve</strong></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -83,9 +163,12 @@
                     <img src="img\logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 text-center mt-5 mt-sm-0 align-self-center">
-                    <a href="#reservation" type="button" 
-                    data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>"
-                    data-placement="bottom" class="btn btn-block btn-warning text-dark">Reserve Table</a>
+                    <button type="button" 
+                    data-toggle="tooltip" data-html="true" title="Call us at <br><strong>+852 12345678</strong>"
+                    data-placement="bottom" class="btn btn-block btn-warning text-white">Call Us</button>
+
+                    <a type="button" data-toggle="modal" data-target="#reserveModal"
+                        class="btn btn-block btn-warning text-white">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -133,6 +216,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -293,7 +379,18 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+            $('#mycarousel').carousel({ interval: 2000 });
+            $('#carouselButton').click(function() {
+                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
+                    $('#mycarousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                } else if ($('#carouselButton').children('span').hasClass('fa-play')) {
+                    $('#mycarousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                }
+            });
         });
     </script>
 </body>
